# swagger.yaml
@@ -35,23 +35,13 @@ definitions:
     x-go-package: github.com/nicuf/file-processor-api/task
   TaskStatus:
     description: TaskStatus is the status of a Task
-    format: int64
-    type: integer
+    type: string
     x-go-package: github.com/nicuf/file-processor-api/task
 info:
   description: Documentation for File Processor API
   title: Classification of File Processor API
   version: 1.0.0
 paths:
-  /addtask/{uuid}:
-    post:
-      description: Add a task to be processed
-      operationId: addTask
-      responses:
-        "200":
-          $ref: '#/responses/taskInfoResponse'
-      tags:
-      - addtask
   /files/{uuid}:
     get:
       description: Returns a list of files with UUID
@@ -59,6 +49,15 @@ paths:
       responses:
         "200":
           $ref: '#/responses/searchFilesResponse'
+      tags:
+      - files
+  /loop/{uuid}:
+    get:
+      description: Returns true or false
+      operationId: searchFiles
+      responses:
+        "200":
+          $ref: '#/responses/isLoopResponse'
       tags:
       - files
   /task/{uuid}:
@@ -70,9 +69,19 @@ paths:
           $ref: '#/responses/taskInfoResponse'
       tags:
       - task
+    post:
+      description: Add a task to be processed
+      operationId: addTask
+      responses:
+        "200":
+          $ref: '#/responses/taskInfoResponse'
+      tags:
+      - addtask
 produces:
 - application/json
 responses:
+  isLoopResponse:
+    description: True or False
   searchFilesResponse:
     description: Array of files that contains a specific UUID
     schema:
